# textadventure

./: .gitattributes  .gitignore  CMakeLists.txt  RANKING_JSON.md  colorHelper.hpp  conversation.txt  dialogInput.hpp  dialogRender.hpp  dialogUI.cpp  dialogUI.hpp  dialogueLine.hpp  game.cpp  game.hpp  introScreen.cpp  introTitle.cpp  introTitle.hpp  main.cpp  mapSelectionUI.cpp  mapSelectionUI.hpp  nineSliceBox.hpp  quizUI.cpp  quizUI.hpp  resources.cpp  resources.hpp  speaker.hpp  state.hpp  storyIntro.hpp  textColorHelper.cpp  textColorHelper.hpp  textLayout.cpp  textStyles.hpp  weaponSelectionUI.cpp  weaponSelectionUI.hpp
.github/workflows/: cross-platform-release.yml
assets/data/: conversation.txt
assets/shaders/: hp_badge.frag
docs/: PROJECT_OVERVIEW.md
scripts/: cmrelease_glandular_arm64.zsh  cmrelease_glandular_win64.zsh  cmrelease_glandular_x86_64.zsh  copy_assets_with_rankings.cmake  toolchain-mingw64.cmake
src/audio/: audioManager.cpp  audioManager.hpp
src/core/: endSequenceController.cpp  endSequenceController.hpp  game.cpp  game.hpp  itemActivation.cpp  itemActivation.hpp  itemController.cpp  itemController.hpp  main.cpp  ranking.cpp  ranking.hpp  state.hpp  teleportController.cpp  teleportController.hpp
src/helper/: colorHelper.hpp  dragonHelpers.cpp  dragonHelpers.hpp  healingPotion.cpp  healingPotion.hpp  layoutHelpers.cpp  layoutHelpers.hpp  soundHelper.cpp  soundHelper.hpp  textColorHelper.cpp  textColorHelper.hpp  weaponHelpers.cpp  weaponHelpers.hpp
src/items/: itemRegistry.cpp  itemRegistry.hpp
src/rendering/: colorHelper.hpp  dialogRender.hpp  locations.cpp  locations.hpp  textColorHelper.cpp  textColorHelper.hpp  textLayout.cpp  textLayout.hpp
src/resources/: itemFiles.hpp  resources.cpp  resources.hpp
src/story/: dialogInput.hpp  dialogueLine.hpp  locationDialogues.cpp  locationDialogues.hpp  mapTutorial.hpp  quests.hpp  storyIntro.hpp  textStyles.cpp  textStyles.hpp
src/ui/: battleUI.cpp  battleUI.hpp  bookshelfUI.cpp  bookshelfUI.hpp  brokenWeaponPreview.cpp  brokenWeaponPreview.hpp  confirmationUI.cpp  confirmationUI.hpp  creditsUI.cpp  creditsUI.hpp  dialogDrawElements.cpp  dialogDrawElements.hpp  dialogUI.cpp  dialogUI.hpp  genderSelectionUI.cpp  genderSelectionUI.hpp  introScreen.cpp  introScreen.hpp  introTitle.cpp  introTitle.hpp  mapSelectionUI.cpp  mapSelectionUI.hpp  menuUI.cpp  menuUI.hpp  nineSliceBox.hpp  popupStyle.hpp  quizGenerator.cpp  quizGenerator.hpp  quizUI.cpp  quizUI.hpp  rankingUI.cpp  rankingUI.hpp  sillyRiddles.cpp  sillyRiddles.hpp  treasureChestUI.cpp  treasureChestUI.hpp  uiEffects.cpp  uiEffects.hpp  uiVisibility.cpp  uiVisibility.hpp  (+3 more)
